--- a/library.example.properties
+++ b/library.example.properties
@@ -30,6 +30,6 @@ maintainer=IMMORTAL_SNIPER1
 sentence=A library for the AD53xx DAC family.
 paragraph=A library for the AD53xx DAC family. As of now only the I2C ICs are supported but adding SPI versions should be easy in the future.
 category=Device Control
-url=http://example.com/
+url=https://github.com/immortal-sniper1/AD53xx_library
 architectures=*
 includes=Wire.h
